--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
@@ -4,29 +4,29 @@
         </h3>
             
     </div>
-    <div id="CreateUser" tabindex="-1" aria-hidden="true" data-bind="with:selectedUser">
+    <div id="CreateUser" tabindex="-1" aria-hidden="true" data-bind="with:SelectedUser">
     <div class="col-lg-12 pad0 padB0">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group ">
                     <label>First Name</label>
-                    <input type="text" data-bind="value:firstname" class="form-control" />
+                    <input type="text" data-bind="value:FirstName" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label>Last Name</label>
-                    <input type="text" data-bind="value:lastname" class="form-control" />
+                    <input type="text" data-bind="value:LastName" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" data-bind="value:email" class="form-control" />
+                    <input type="text" data-bind="value:Email" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label>Phone</label>
-                    <input type="text" data-bind="value:phoneNumber,numericOnly:true" class="form-control" />
+                    <input type="text" data-bind="value:PhoneNumber,numericOnly:true" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label>Address</label>
-                    <textarea data-bind="value:address" class="form-control"></textarea>
+                    <textarea data-bind="value:Address" class="form-control"></textarea>
                 </div>
             </div>
             <div class="col-md-6 ">
@@ -35,21 +35,17 @@
                     <div class="form-group ">
 
                         <label class="checkbox-inline i-checks">
-                            <input type="checkbox" data-bind="checked:islistingmember">
+                            <input type="checkbox" data-bind="checked:IsListingMember">
                             <i></i>Listing Member
                         </label>
-
-                        @*<div class="col-md-1 m-b-lg"><input type="checkbox" data-bind="checked:islistingmember" /></div><div class="col-md-8">
-                                        <label> Listing Member</label>
-                            </div>*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="btn-group">
-                        <input id="avatar" class="btn btn-primary uploadbtn" type="file" name="avatar" accept=".jpg,.jpeg,.png,.gif" data-bind="text:image" />
+                        <input id="avatar" class="btn btn-primary uploadbtn" type="file" name="avatar" accept=".jpg,.jpeg,.png,.gif" data-bind="text:Image" />
                     </div>
                     <div class="nailthumb-container">
-                        <img id=ThumbnailImageS height=85 width=90 border=0 data-bind=" attr:{src: image}">
+                        <img id=ThumbnailImageS height=85 width=90 border=0 data-bind=" attr:{src: Image}">
                     </div>
                 </div>
             </div>
@@ -58,17 +54,17 @@
 </div>
 <div class="col-md-12">
 
-    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUser"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
+    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:IsButtonBusy,click:SaveUser"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
 
 </div>
 
 
 @section scripts{
-    <script src="~/App/ViewModels/CRM/models.js"></script>
-    <script src="~/App/ViewModels/User/UserViewModel.js"></script>
+<script src="~/App/ViewModels/User/UserModel.js"></script>
+<script src="~/App/ViewModels/User/AddEditUserViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            var vm = new UserViewModel();
+            var vm = new AddEditUserViewModel();
             ko.applyBindings(vm);
             vm.clear();
         });
