--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
        
             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser))
 {
-    <button type="button" class="btn btn-primary pull-right m-t-lg m-bottom10 m-b-sm" data-bind="click:gotoUserPage"><i class="fa fa-plus"></i> Create</button>
+    <button type="button" class="btn btn-primary pull-right m-t-lg m-bottom10 m-b-sm" data-bind="click:GotoUserPage"><i class="fa fa-plus"></i> Create</button>
 }
         
   
@@ -29,12 +29,12 @@
             <input type="text" class="form-control" data-bind="value:SearchPhone,numericOnly:true" placeholder="Phone" />
         </div>
         <div class="pull-right f-width">
-            <button type="button" class="btn btn-primary f-width cd-as" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
+            <button type="button" class="btn btn-primary f-width cd-as" data-bind="click:$root.Search"><i class="fa fa-search"></i> Search</button>
         </div>
     </div>
     <div class="clearfix"></div>
     <div class="scroll-horrizontal">
-        <div data-bind="loading:$root.isBusy">
+        <div data-bind="loading:$root.IsBusy">
             <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
                 <thead class="bg-grey">
                     <tr>
@@ -46,19 +46,19 @@
                 </thead>
                 <tbody data-bind='foreach:$root.UserLists'>
                     <tr>
-                        <td><span data-bind="text: name"> </span></td>
-                        <td><span data-bind="text: email"> </span></td>
-                        <td><span data-bind="text: phoneNumber"> </span></td>
+                        <td><span data-bind="text: Name"> </span></td>
+                        <td><span data-bind="text: Email"> </span></td>
+                        <td><span data-bind="text: PhoneNumber"> </span></td>
                         <td>
-                            &nbsp;&nbsp;&nbsp;<a href="#" data-bind="click:$root.gotoUserdetails"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;&nbsp;
+                            &nbsp;&nbsp;&nbsp;<a href="#" data-bind="click:$root.GotoUserDetails"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;&nbsp;
                             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser))
                             {
-                                <a href="#CreateUser" data-bind="click:$root.updateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
-                                <a href="#" data-bind="click:$root.Userdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
+                                <a href="#CreateUser" data-bind="click:$root.UpdateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
+                                <a href="#" data-bind="click:$root.UserDelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
                             }
                             @if (!@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser) && @RoleChecker.CheckRole(ViewBag.RoleId, RoleIds.User))
                             {
-                                <a href="#UpdateUserProfile" data-bind="click:$root.updateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
+                                <a href="#UpdateUserProfile" data-bind="click:$root.UpdateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
                     }
                         </td>
                     </tr>
@@ -68,85 +68,12 @@
     </div>
     </div>
 
-<div class="modal fade" id="CreateUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header bg-primary">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <strong><span data-bind="text:DisplayTitle"></span></strong>
-            </div>
-            <div class="modal-body clearfix" data-bind="with:selectedUser">
-                <div class="col-lg-12 pad0 padB0">
-                    <div class="col-md-6">
-
-                        <div class="form-group ">
-                            <label>First Name</label>
-                            <input type="text" data-bind="value:firstname" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Last Name</label>
-                            <input type="text" data-bind="value:lastname" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" data-bind="value:email" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" data-bind="value:phoneNumber,numericOnly:true" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>Address</label>
-                            <textarea data-bind="value:address" class="form-control"></textarea>
-                        </div>
-                    </div>
-                    <div class="col-md-6 ">
-                        <label>&nbsp;</label>
-                        <div class="form-group">
-                            <input type="checkbox" data-bind="checked:islistingmember" /> <label> Listing Member</label>
-                        </div>
-
-                        <div class="form-group">
-                            <label>DED License No</label>
-                            <input type="text" data-bind="value:DEDlicenseNumber" class=" form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label>RERA Registration No</label>
-                            <input type="text" data-bind="value:RERAregistrationNumber" class=" form-control" />
-                        </div>
-                        <div class="form-group">
-                            <div class="btn-group">
-                                <input id="avatar" class="btn btn-primary uploadbtn" type="file" name="avatar" accept=".jpg,.jpeg,.png,.gif" data-bind="text:image" />
-                            </div>
-                            <div class="nailthumb-container">
-                                <img id=ThumbnailImageS height=85 width=90 border=0 data-bind=" attr:{src: image}">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <div class="col-md-12 pad0 padT0">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
-                    <button type="button" class="btn btn-primary" data-bind="click:$root.saveUser,visible:isCreate">Save</button>
-                    <button type="button" class="btn btn-primary" data-bind="click:$root.updateUser,visible:isUpdate">Update</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 @section scripts{
-<script src="~/App/ViewModels/CRM/models.js"></script>
-<script src="~/App/ViewModels/User/UserViewModel.js"></script>
+<script src="~/App/ViewModels/User/UserModel.js"></script>
+<script src="~/App/ViewModels/User/SearchUserViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            var vm = new UserViewModel();
+            var vm = new SearchUserViewModel();
             ko.applyBindings(vm);
             vm.UserListing();
         });
