--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-﻿@{
+@{
     ViewBag.Title = "Update";
 }
 <div class="">
@@ -9,36 +8,36 @@
         </div>
         </div>
     <div class="clearfix"></div>
-    <div data-bind="loading:$root.isBusy()">
+    <div data-bind="loading:$root.IsBusy">
         <div>
             <input type="hidden" id="hdnAgnetId" value="@ViewBag.UserId" />
-            <div class="pad0 padB0" data-bind="with:selectedUser">
+            <div class="pad0 padB0" data-bind="with:SelectedUser">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>User Name</label>
-                        <input type="text" data-bind="value:username" disabled="disabled" class="form-control" />
+                        <input type="text" data-bind="value:UserName" disabled="disabled" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>First Name</label>
-                        <input type="text" data-bind="value:firstname" class="form-control" />
+                        <input type="text" data-bind="value:FirstName" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Last Name</label>
-                        <input type="text" data-bind="value:lastname" class="form-control" />
+                        <input type="text" data-bind="value:LastName" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" data-bind="value:email"  class="form-control" />
+                        <input type="text" data-bind="value:Email" class="form-control" />
                     </div>
 
                     <div class="form-group">
                         <label>Phone</label>
-                        <input type="text" data-bind="value:phoneNumber,numericOnly:true" class="form-control" />
+                        <input type="text" data-bind="value:PhoneNumber,numericOnly:true" class="form-control" />
                     </div>
 
                     <div class="form-group">
                         <label>Address</label>
-                        <textarea data-bind="value:address" class="form-control" rows="5"></textarea>
+                        <textarea data-bind="value:Address" class="form-control" rows="5"></textarea>
                     </div>
                 </div>
                 <div class="col-md-6 ">
@@ -47,7 +46,7 @@
 
 
                         <label class="checkbox-inline i-checks">
-                            <input type="checkbox" data-bind="checked:islistingmember">
+                            <input type="checkbox" data-bind="checked:IsListingMember">
                             <i></i> Listing Member
                         </label>
 
@@ -55,10 +54,10 @@
                     </div>
                     <div class="form-group">
                         <div class="btn-group">
-                            <input id="avatar" class="btn btn-primary uploadbtn" type="file" name="avatar" accept=".jpg,.jpeg,.png,.gif" data-bind="text:image" />
+                            <input id="avatar" class="btn btn-primary uploadbtn" type="file" name="avatar" accept=".jpg,.jpeg,.png,.gif" data-bind="text:Image" />
                         </div>
                         <div class="nailthumb-container">
-                            <img id=ThumbnailImageS height=85 width=90 border=0 data-bind=" attr:{src: image}">
+                            <img id=ThumbnailImageS height=85 width=90 border=0 data-bind=" attr:{src: Image}">
                         </div>
                     </div>
 
@@ -68,105 +67,20 @@
             </div>
             <div class="col-md-12 pad0 padT0">
                 @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveUserProfile">Update</button>*@
-                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUserProfile"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-check"></i> Update</span></button>
+                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.IsButtonBusy,click:UpdateUserProfile"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-check"></i> Update</span></button>
             </div>
         </div>
     </div>
 </div>
 
 @section scripts{
-    <script src="~/App/ViewModels/CRM/models.js"></script>
-    <script src="~/App/ViewModels/User/UserViewModel.js"></script>
+<script src="~/App/ViewModels/User/UserModel.js"></script>
+<script src="~/App/ViewModels/User/AddEditUserViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            var vm = new UserViewModel();
+            var vm = new AddEditUserViewModel();
             ko.applyBindings(vm);
-            vm.getUser();
-            //vm.clear();
+            vm.GetUser();
         });
     </script>
-=======
-﻿@{
-    ViewBag.Title = "Update";
-}
-<div class="">
-    <div class="col-md-6 row">
-        <div class="col-md-12 m-top20">
-            <h3 class="inline-b">Edit User</h3>
-        </div>
-        </div>
-    <div class="clearfix"></div>
-    <div data-bind="loading:$root.isBusy()">
-        <div>
-            <input type="hidden" id="hdnAgnetId" value="@ViewBag.UserId" />
-            <div class="pad0 padB0" data-bind="with:selectedUser">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>First Name</label>
-                        <input type="text" data-bind="value:firstname" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label>Last Name</label>
-                        <input type="text" data-bind="value:lastname" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="text" data-bind="value:email" disabled="disabled" class="form-control" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Phone</label>
-                        <input type="text" data-bind="value:phoneNumber,numericOnly:true" class="form-control" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Address</label>
-                        <textarea data-bind="value:address" class="form-control" rows="5"></textarea>
-                    </div>
-                </div>
-                <div class="col-md-6 ">
-                    <label>&nbsp;</label>
-                    <div class="form-group m-b-md m-l-lg">
-
-
-                        <label class="checkbox-inline i-checks">
-                            <input type="checkbox" data-bind="checked:islistingmember">
-                            <i></i> Listing Member
-                        </label>
-
-
-                    </div>
-                    <div class="form-group">
-                        <div class="btn-group">
-                            <input id="avatar" class="btn btn-primary uploadbtn" type="file" name="avatar" accept=".jpg,.jpeg,.png,.gif" data-bind="text:image" />
-                        </div>
-                        <div class="nailthumb-container">
-                            <img id=ThumbnailImageS height=85 width=90 border=0 data-bind=" attr:{src: image}">
-                        </div>
-                    </div>
-
-                </div>
-                <div class="clearfix"></div>
-      
-            </div>
-            <div class="col-md-12 pad0 padT0">
-                @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveUserProfile">Update</button>*@
-                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUserProfile"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-check"></i> Update</span></button>
-            </div>
-        </div>
-    </div>
-</div>
-
-@section scripts{
-    <script src="~/App/ViewModels/CRM/models.js"></script>
-    <script src="~/App/ViewModels/User/UserViewModel.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var vm = new UserViewModel();
-            ko.applyBindings(vm);
-            vm.getUser();
-            //vm.clear();
-        });
-    </script>
->>>>>>> fbadbf23b119ffeea697126091aeb2f4394d1208
 }
