Added lead source view.

--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
@@ -81,6 +81,7 @@
             var vm = new AddEditUserViewModel();
             ko.applyBindings(vm);
             vm.GetUser();
+            vm.clear();
         });
     </script>
 }
