--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                             </li>
 
                             <li class="">
-                                <a href="@Url.Action("index", "Account", new { area = "CRM" })"> <i class="fa fa-dollar icon"> <b class="bg-dark"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Account</span> </a>
+                                <a href="@Url.Action("index", "Account", new { area = "CRM" })"> <i class="fa fa-cubes icon"> <b class="bg-dark"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Account</span> </a>
                                 <ul class="nav bg" style="display: none;">
                                     <li> <a href="@Url.Action("index", "Account", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
                                     <li> <a href="@Url.Action("create", "Account", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
@@ -96,7 +96,7 @@
                             </li>
 
                             <li class="">
-                                <a href="@Url.Action("index", "Contact", new { area = "CRM" })"> <i class="fa fa-phone icon"> <b class="bg-primary"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Contacts</span> </a>
+                                <a href="@Url.Action("index", "Contact", new { area = "CRM" })"> <i class="fa fa-phone icon"> <b class="bg-danger"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Contacts</span> </a>
                                 <ul class="nav bg" style="display: none;">
                                     <li> <a href="@Url.Action("index", "Contact", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
                                     <li> <a href="@Url.Action("create", "Contact", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
@@ -113,7 +113,7 @@
                             </li>
 
                             <li class="">
-                                <a href="@Url.Action("index", "User", new { area = "CRM" })"> <i class="fa fa-users icon"> <b class="bg-primary"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Users</span> </a>
+                                <a href="@Url.Action("index", "User", new { area = "CRM" })"> <i class="fa fa-users icon"> <b class="bg-blue"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Users</span> </a>
                                 <ul class="nav bg" style="display: none;">
                                     <li> <a href="@Url.Action("index", "User", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
                                     <li> <a href="@Url.Action("create", "User", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
