--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Details.cshtml
@@ -63,6 +63,10 @@
                         <label class="lblwidth"><b>Description</b>&nbsp;</label>
                         <span data-bind="text:Comments"></span>
                     </div>
+                    <div class=" form-group">
+                        <label class="lblwidth"><b>Created On</b>&nbsp;</label>
+                        <span data-bind="text:CreatedOn"></span>
+                    </div>
                 </div>
             </div>
             <div class="clearfix"></div>
