--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
@@ -19,6 +19,10 @@
                             <input type="text" data-bind="value:LastName" class="form-control" />
                         </div>
                         <div class="form-group">
+                            <label>Designation</label>
+                            <input type="text" data-bind="value:Designation" class="form-control" />
+                        </div>
+                        <div class="form-group">
                             <label>Company/Family</label>
                             <input type="text" data-bind="value:Company" class="form-control" />
                         </div>
@@ -35,9 +39,16 @@
                         </div>
                         <div class="form-group">
                             <label data-bind="visible:IsDropdownVisbility">User</label>
-                            <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedOptionalUser, optionsCaption:'Select User',visible:IsDropdownVisbility" class="form-control"></select>
+                            <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:LeadSourceUserId, optionsCaption:'Select User',visible:IsDropdownVisbility" class="form-control"></select>
                             <label data-bind="visible:IsTextBox">Other</label>
                             <input type="text" data-bind="value:Other,visible:IsTextBox" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label>Recieved On</label>
+                            <div class="input-group">
+                                <input type="text" placeholder="Click here to Add Date" id="RecievedOn" data-bind="value:RecievedOn" class="form-control datepicker">
+                                <span class="input-group-addon"><i class="fa fa-calendar-o fa-fw"></i></span>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label>Assign To</label>
@@ -60,9 +71,6 @@
                             <label>Phone</label>
                             <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
                         </div>
-
-
-
                     </div>
                     <div class="col-lg-6">
 
@@ -71,7 +79,7 @@
                             <input type="text" data-bind="value:Website" class=" form-control" />
                         </div>
 
-                        
+
                     </div>
                     <div class="col-lg-12">
                         <div class="form-group">
@@ -79,14 +87,9 @@
                             <textarea data-bind="value:Comment" class=" form-control"
                                       rows="3"></textarea>
                         </div>
-                        </div>
-
                     </div>
-
-
+                </div>
             </div>
-
-
         </div>
         <div class="col-md-12">
             <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveLead"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
