--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
@@ -32,6 +32,14 @@
                             <span data-bind="text:LastName"></span>
                         </div>
                         <div class="form-group">
+                            <label class="lblwidth"><b>Designation </b></label>
+                            <span data-bind="text:Designation"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="lblwidth"><b>Recieved On </b></label>
+                            <span data-bind="text:RecievedOn"></span>
+                        </div>
+                        <div class="form-group">
                             <label class="lblwidth"><b>Company/Family </b></label>
                             <span data-bind="text:Company"></span>
                         </div>
@@ -47,6 +55,13 @@
                         </div>
                         <div class="form-group">
                             <label class="lblwidth"><b>Lead Source </b></label><span data-bind="text:LeadSource"></span>
+                        </div>
+                        <div class="form-group" data-bind="visible:LeadSourceNameVisible">
+                            <label class="lblwidth"><b>LeadSource Name</b></label><span data-bind="text:LeadSourceName"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="lblwidth"><b>Created On </b></label>
+                            <span data-bind="text:CreatedOn"></span>
                         </div>
                     </div>
                 </div>
