--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
@@ -18,36 +18,43 @@
             <div class="tab-pane fade active in" id="potential">
                 <div class="panel" >
                     <div class="col-lg-12">
-
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Potential Name</b>&nbsp;</label>
-                            <label data-bind="text:PotentialName"></label>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Potential Name</b>&nbsp;</label>
+                                <label data-bind="text:PotentialName"></label>
+                            </div>
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Potential Amount</b>&nbsp;</label>
+                                <span data-bind="text:PotentialAmount"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Expected Close Date</b>&nbsp;</label>
+                                <span data-bind="text:ExpectedCloseDate"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Account</b>&nbsp;</label>
+                                <span data-bind="text:AccountName"></span>
+                            </div>
+ 
+                            </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Sales Stage</b>&nbsp;</label>
+                                <span data-bind="text:SalesStageName"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Assigned To</b>&nbsp;</label>
+                                <span data-bind="text:UserName"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="lblwidth"><b>Lead Source</b>&nbsp;</label>
+                                <span data-bind="text:LeadSourceName"></span>
+                            </div>
+                            <label class="lblwidth"><b>Description</b>&nbsp;</label>
+                            <span data-bind="text:Description"></span>
                         </div>
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Potential Amount</b>&nbsp;</label>
-                            <span data-bind="text:PotentialAmount"></span>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Expected Close Date</b>&nbsp;</label>
-                            <span data-bind="text:ExpectedCloseDate"></span>
-                        </div>
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Account</b>&nbsp;</label>
-                            <span data-bind="text:AccountName"></span>
-                        </div>
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Sales Stage</b>&nbsp;</label>
-                            <span data-bind="text:SalesStageName"></span>
-                        </div>
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Assigned To</b>&nbsp;</label>
-                            <span data-bind="text:UserName"></span>
-                        </div>
-                        <div class="form-group">
-                            <label class="lblwidth"><b>Lead Source</b>&nbsp;</label>
-                            <span data-bind="text:LeadSourceName"></span>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="tab-pane fade" id="more">
