--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
@@ -1,10 +1,10 @@
-﻿    <div class="col-md-12 m-top20">
-        <h3 class="inline-b">
-            Create User
-        </h3>
-            
-    </div>
-    <div id="CreateUser" tabindex="-1" aria-hidden="true" data-bind="with:SelectedUser">
+﻿<div class="col-md-12 m-top20">
+    <h3 class="inline-b">
+        Create User
+    </h3>
+
+</div>
+<div id="CreateUser" tabindex="-1" aria-hidden="true" data-bind="with:SelectedUser">
     <div class="col-lg-12 pad0 padB0">
         <div class="row">
             <div class="col-md-6">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" data-bind="value:Email" class="form-control" />
+                    <input type="text" data-bind="value:Email, event:{ change: $parent.checkEmail}" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label>Phone</label>
@@ -60,13 +60,14 @@
 
 
 @section scripts{
-<script src="~/App/ViewModels/User/UserModel.js"></script>
-<script src="~/App/ViewModels/User/AddEditUserViewModel.js"></script>
+    <script src="~/App/ViewModels/User/UserModel.js"></script>
+    <script src="~/App/ViewModels/User/AddEditUserViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             var vm = new AddEditUserViewModel();
             ko.applyBindings(vm);
             vm.clear();
+            vm.init();
         });
     </script>
 }
