--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
@@ -6,7 +6,7 @@
         <div class="col-md-12 m-top20">
             <h3 class="inline-b">Edit User</h3>
         </div>
-        </div>
+    </div>
     <div class="clearfix"></div>
     <div data-bind="loading:$root.IsBusy">
         <div>
@@ -15,7 +15,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>User Name</label>
-                        <input type="text" data-bind="value:UserName" disabled="disabled" class="form-control" />
+                        @*<input type="text" data-bind="value:UserName" disabled="disabled" class="form-control" />*@
+                        <label data-bind="text:UserName"></label>
                     </div>
                     <div class="form-group">
                         <label>First Name</label>
@@ -27,7 +28,7 @@
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" data-bind="value:Email" class="form-control" />
+                        <input type="text" data-bind="value:Email, event:{ change: $parent.checkEmailEdit}" class="form-control" />
                     </div>
 
                     <div class="form-group">
@@ -63,7 +64,7 @@
 
                 </div>
                 <div class="clearfix"></div>
-      
+
             </div>
             <div class="col-md-12 pad0 padT0">
                 @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveUserProfile">Update</button>*@
@@ -74,14 +75,15 @@
 </div>
 
 @section scripts{
-<script src="~/App/ViewModels/User/UserModel.js"></script>
-<script src="~/App/ViewModels/User/AddEditUserViewModel.js"></script>
+    <script src="~/App/ViewModels/User/UserModel.js"></script>
+    <script src="~/App/ViewModels/User/AddEditUserViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             var vm = new AddEditUserViewModel();
             ko.applyBindings(vm);
             vm.GetUser();
             vm.clear();
+            vm.init();
         });
     </script>
 }
